<resources>
    <string name="app_name">MFM Application</string>
    <string name="veuillez">Veuillez entrer les données du patient :</string>
    <string name="textMandatory">Tous les champs munis d\'un astérisque rouge doivent être remplis.</string>
    <string name="quit">QUITTER</string>
    <string name="valid">VALIDER</string>
    <string name="mandatory"> *  </string>
    <string name="mandatoryError"> *    </string>
    <string name="name"> Nom :</string>
    <string name="surname"> Prénom :</string>
    <string name="birthdate"> Date de naissance :</string>
    <string name="droitier"> Droitier</string>
    <string name="gaucher"> Gaucher</string>
    <string name="name2">Nom</string>
    <string name="surname2">Prénom</string>
    <string name="dateformat">DD/MM/YYYY</string>
    <string name="erase">Effacer</string>
    <string name="retour">Retour</string>
    <string name="choiceExercise">Veuillez sélectionner un item :</string>
    <string name="item18">Item 18</string>
    <string name="instructionsItem18">CONSIGNES : \n Item 18</string>
    <string name="instructionsItem22">CONSIGNES : \n Item 22</string>
    <string name="item22">Item 22</string>
    <string name="changePatient">Changer de patient</string>
    <string name="consignesItem18">Faire le tour du CD avec un doigt</string>
    <string name="begin">Démarrer</string>
    <string name="finish">Terminer</string>
    <string name="CDimage">Image du CD</string>
    <string name="consignesItem22">Pointer 8 dessins dans un quadrillage</string>
    <string name="item22image">Image de l\'item 22</string>
    <string name="errorDate">Veuillez choisir une date.</string>
    <string name="errorName">"Le champs nom ne doit contenir que des lettres.</string>
    <string name="errorSurname">"Le champs prénom ne doit contenir que des lettres.</string>
    <string name="errorVoid">"Veuillez remplir tous les champs."</string>
    <string name="errorDateAfter">"La date choisie doit être antérieure à la date d'aujourd'hui."</string>
    <string name="internalError">"Une erreur interne en rapport avec le format de la date est survenue."</string>
    <string name="errorRadioButton">"Veuillez sélectionner Droitier ou Gaucher."</string>
    <string name="confirmBack">"Voulez-vous revenir à l'écran précédent ? \n (Attention vos données peuvent être effacées)</string>
    <string name="confirmBackAccueil">"Voulez-vous vraiment changer de patient ? \n </string>
    <string name="enCours"> Exercice en cours… </string>
    <string name="saving"> ENREGISTREMENT EN COURS… </string>
    <string name="pdfsaving"> PDF en cours d\'enregistrement…</string>
    <string name="cotationTablet">"Cotation sur tablette : "</string>
    <string name="cotationPaper">"Cotation sur papier : "</string>
    <string name="zero">" 0 "</string>
    <string name="one">" 1 "</string>
    <string name="two">" 2 "</string>
    <string name="three">" 3 "</string>
    <string name="donotknow">" Ne sait pas "</string>
    <string name="compensation">"Compensation : "</string>
    <string name="yes">" Oui "</string>
    <string name="no">" Non "</string>
    <string name="circle">"Cercle : "</string>
    <string name="small">" Petit "</string>
    <string name="big">" Grand "</string>
    <string name="comments">"Commentaires : "</string>
    <string name="save">"Enregistrer"</string>
    <string name="info">Infos : </string>
    <string name="errorCotationPaper">"Veuillez choisir une cotation sur papier."</string>
    <string name="errorCotationTablet">"Veuillez choisir une cotation sur tablette."</string>
    <string name="errorCompensation">"Veuillez choisir une compensation."</string>
    <string name="errorCircle">"Veuillez sélectionner une taille de cercle."</string>
    <string name="errorDG">"Une erreur est survenue concernant la lecture de la condition : gaucher/droitier."</string>
    <string name="restart">"RECOMMENCER"</string>
    <string name="item18carto">Item 18 : Cartographie</string>
    <string name="item22carto">Item 22 : Cartographie</string>
    <string name="savedOK">Le fichier a bien été enregistré dans le dossier "Download" </string>
    <string name="savedPB">ERREUR : Le fichier n\'a pas pu être enregistré ! </string>
    <string name="viewPB">ERREUR : Le fichier pdf n\'a pas pu être ouvert ! Veuillez installer une application compatible</string>
    <string name="select">Veuillez sélectionner : </string>
    <string name="errorCarto">ERREUR : problème d\'enregistrement de la cartographie</string>
    <string name="pbPDF">ERREUR : Problème de création du pdf !</string>
    <string name="imageboutonquitter">imageBoutonQuitter</string>
    <string name="compl_info">Informations complémentaires :</string>
    <string name="label_continue">Continuer MFM</string>
    <string name="label_preview">Visualiser le pdf</string>
    <string name="label_quit">Quitter l\'application</string>
    <string name="directoryExist">Un dossier existe déjà pour ce patient</string>
    <string name="jj_mm_aaaa">JJ/MM/AAAA</string>
    <string name="paper18">Veuillez réaliser l\'item 18 en version papier et cliquer sur OK quand vous aurez terminé.</string>
    <string name="paper22">Veuillez réaliser l\'item 22 en version papier et cliquer sur OK quand vous aurez terminé.</string>
    <string name="pose">Pose le doigt sans précision</string>
    <string name="appui">Avec appui de la paume</string>
    <string name="glisse">Glisse le doigt</string>
    <string name="change">Change de doigt</string>
    <string name="compensationTronc">Avec compensation du tronc</string>
    <string name="pause">Avec pause</string>
</resources>
