<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ouverture_appli"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gscop.mfm_application.ouverture_appli"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veuillez"
        android:textColor="#0d8dc9"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#0d8dc9"
            android:gravity="center"/>

        <EditText
            android:id="@+id/nom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name2"
            android:inputType="textPersonName"
            android:lines="2"
            android:layout_weight="1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#0d8dc9"
            android:gravity="center"/>

        <EditText
            android:id="@+id/prenom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname2"
            android:inputType="textPersonName"
            android:lines="2"
            android:layout_weight="1"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#0d8dc9"
            android:gravity="center"/>
        <EditText
            android:id="@+id/taille"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateformat"
            android:inputType="date"
            android:lines="2"
            android:layout_weight="1"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/quitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:layout_weight="1"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:background="#9bc3f1"/>
        <Button
            android:id="@+id/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid"
            android:layout_weight="1"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:background="#9bc3f1"/>
    </LinearLayout>

</LinearLayout>
