<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/PatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:textColor="#767879"
        android:textSize="30sp"
        tools:text="Nom et prénom du patient" />

    <TextView
        android:id="@+id/champNumeroItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/item18"
        android:textAlignment="center"
        android:textColor="#0d8dc9"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/textMandatory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:id="@+id/textMandatory" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/mandatory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mandatoryCotation"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#f2053c"  />

        <TextView
            android:id="@+id/textCotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="13"
            android:text="@string/cotation"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#0d8dc9" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radioGroupCotation"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonNSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/donotknow"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RadioGroup>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/mandatory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mandatoryCircle"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#f2053c" />

        <TextView
            android:id="@+id/textCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="13"
            android:text="@string/circle"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#0d8dc9" />

        <RadioGroup
            android:id="@+id/radioGroupCercle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/small"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/big"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RadioGroup>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/textComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="13"
        android:text="@string/comments"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#0d8dc9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/select"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#0d8dc9" />

        <tutoandroid.libmultispinner.MultiSelectionSpinner
            android:id="@+id/mySpinner"
            android:layout_gravity="center"
            android:layout_width="500dp"
            android:layout_height="50dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/editTextComments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:background="@color/common_google_signin_btn_text_light_disabled"
        android:lines="5"
        android:scrollbars="vertical"
        tools:ignore="LabelFor" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#9bc3f1"
        android:text="@string/save"
        android:textSize="30sp" />

</LinearLayout>