<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/boutonretour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retour"
        android:background="#9bc3f1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choiceExercise"
        android:textColor="#0d8dc9"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <Button
        android:text="@string/item18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:textColor="#0d8dc9"
        android:textSize="16sp"
        android:background="#caddf4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:id="@+id/button"/>

    <Button
        android:text="@string/item22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:textColor="#0d8dc9"
        android:textSize="16sp"
        android:background="#caddf4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:id="@+id/button2" />

</RelativeLayout>