<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/champNumeroItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item22"
            android:textAlignment="center"
            android:textColor="#0d8dc9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/consignesItem22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consignesItem22"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/item22"
        android:contentDescription="@string/item22image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:src="@drawable/grille" />

        <Button
            android:id="@+id/boutonDemarrer"
            android:text="@string/begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9bc3f1"
            android:layout_weight="1"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="53dp"/>

</RelativeLayout>