<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ouverture_appli"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gscop.mfm_application.ouverture_appli"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/texteAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/veuillez"
        android:textColor="#0d8dc9"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textMandatory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textMandatory"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mandatoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name2"
            android:inputType="textPersonName"
            android:lines="2"
            android:maxLength="30"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mandatorySurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/surname"
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/surname2"
            android:inputType="textPersonName"
            android:lines="2"
            android:maxLength="30" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mandatoryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texteBirthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/birthdate"
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40sp"
            android:endYear="2010"
            android:firstDayOfWeek="2" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <RadioGroup
        android:id="@+id/radioGroupMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/boutonGaucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_weight="1"
            android:text="@string/gaucher"
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mandatoryLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/boutonDroitier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/droitier"
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/madatoryRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonerase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9bc3f1"
            android:text="@string/erase"
            android:textSize="30sp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/boutonvalider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9bc3f1"
            android:text="@string/valid"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/exit_button_2" />

</LinearLayout>
