<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:text="@string/item18"
            android:textColor="#0d8dc9"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/champNumeroItem" />

        <TextView
            android:text="@string/consignesItem18"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />
    </LinearLayout>

        <Button
            android:text="@string/begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#9bc3f1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20sp"
            android:id="@+id/boutonDemarrer"/>

</RelativeLayout>