<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="TextViewPatientName"
        tools:text="Nom et prénom du patient"
        android:textColor="#0d8dc9"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:id="@+id/PatientName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choiceExercise"
        android:textColor="#0d8dc9"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/texteChoixItem"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Button
        android:text="@string/item18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texteChoixItem"
        android:textColor="#0d8dc9"
        android:textSize="30sp"
        android:background="#caddf4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:id="@+id/buttonitem18"/>

    <Button
        android:text="@string/item22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonitem18"
        android:textColor="#0d8dc9"
        android:textSize="30sp"
        android:background="#caddf4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:id="@+id/buttonitem22" />

    <Button
        android:id="@+id/boutonchgmtpatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePatient"
        android:textSize="25sp"
        android:textColor="#0d8dc9"
        android:background="#9bc3f1"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonitem22"
        android:layout_marginBottom="60dp" />

</RelativeLayout>